# nonebot-plugin-ocr

./: .gitignore  CHANGELOG.md  README.md  config.template.toml  pyproject.toml  requirements.txt
docs/: baidu_cloud.md  config.md  usage.md
nonebot_plugin_ocr/: __init__.py  config.py
nonebot_plugin_ocr/bot/: __init__.py  bot_manage.py  onebot11.py  tool.py
nonebot_plugin_ocr/ocr/: __init__.py  baidu_cloud.py  client.py  ocr_init.py
